--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
+    "react-google-charts": "^4.0.0",
     "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
